Homepage Spacing Fix

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -59,11 +59,11 @@ background-size: cover;
 
 
 .row-fluid {
-margin-top: -20px;
+margin-top: -17px;
 }
 
 .pagination {
-  margin:0px 20px 0px 0px;
+  margin:0px 30px 0px 0px;
 }
 
 .carousel-inner > .active {
@@ -72,7 +72,7 @@ background-color:#323232;
 }
 
 .motto {
-  text-align:right;
+  text-align:center;
   font-size:1.25em;
   line-height: 75%;
   font-family: questrial, serif;
@@ -91,7 +91,7 @@ background-color:#323232;
   color: white;
   text-align: center;
   margin-top:10px;
-  margin-left:80px;
+  margin-left:40px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -159,9 +159,7 @@ margin-left:10px;
 /* Required for jQuery Masonry */
 
 .box {
-    /*padding: 1px;*/
-    font-size: 13px;
-    line-height: 1.4em;
+    padding: 4px;
     float: left;
     /*-webkit-border-radius: 5px;
     -moz-border-radius: 5px;*/
